CTA layout bugfix

--- a/LocalGovUmbraco/wwwroot/core/css/defaults.css
+++ b/LocalGovUmbraco/wwwroot/core/css/defaults.css
@@ -212,5 +212,5 @@ ul[data-horizontal] {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-  gap: 0 1rem;
+  gap: 1rem;
 }
